load("@buildifier_prebuilt//:rules.bzl", "buildifier")
load("@rules_foreign_cc//foreign_cc:defs.bzl", "cmake")

# bazel run //:buildifier
# .. or warn
buildifier(
    name = "buildifier",
    exclude_patterns = [
        "./bazel-*/*",
        "./.git/*",
    ],
    lint_mode = "fix",
)

# "-DWITH_FFMPEG=OFF" is for https://github.com/opencv/opencv/issues/22748
cmake(
    name = "opencv",
    cache_entries = {
        "BUILD_LIST": "core,features2d,highgui,imgcodecs,imgproc,video,videoio",
        "WITH_FFMPEG": "ON",
        "WITH_GTK": "OFF",
        "WITH_QT": "ON",
    },
    lib_source = "@opencv//:all",
    out_include_dir = "include/opencv4",
    out_shared_libs = [
        "libopencv_core.so.408",
        "libopencv_features2d.so.408",
        "libopencv_highgui.so.408",
        "libopencv_imgcodecs.so.408",
        "libopencv_imgproc.so.408",
        "libopencv_video.so.408",
        "libopencv_videoio.so.408",
    ],
    visibility = ["//visibility:public"],
)

cc_library(
    name = "image_processing_toolbox",
    srcs = ["image_processing_toolbox.cc"],
    hdrs = ["image_processing_toolbox.h"],
    data = ["//:testdata"],
    deps = [
        ":opencv",
        "@absl//absl/status",
        "@absl//absl/strings",
    ],
)

cc_test(
    name = "image_processing_toolbox_test",
    srcs = ["image_processing_toolbox_test.cc"],
    data = ["//:testdata"],
    deps = [
        ":image_processing_toolbox",
        "@absl//absl/status:status_matchers",
        "@bazel_tools//tools/cpp/runfiles",
        "@googletest//:gtest_main",
    ],
)

cc_binary(
    name = "image_toolbox_cli",
    srcs = ["image_toolbox_cli.cc"],
    data = ["//:testdata"],
    deps = [
        ":image_processing_toolbox",
        "@absl//absl/flags:flag",
        "@absl//absl/flags:parse",
        "@absl//absl/status",
        "@gflags",
        "@glog",
    ],
)
